Added silver tools
• Introduced silver sword, pickaxe, shovel, axe and hoe. (no textures)
  Stats aren't final and currently lack planned functionality.

--- a/src/main/resources/assets/terafor/lang/en_us.json
+++ b/src/main/resources/assets/terafor/lang/en_us.json
@@ -1,7 +1,12 @@
 {
 	"block.terafor.silver_block": "Block of Silver",
 
+	"item.terafor.silver_axe": "Silver Axe",
+	"item.terafor.silver_hoe": "Silver Hoe",
 	"item.terafor.silver_ingot": "Silver Ingot",
+	"item.terafor.silver_pickaxe": "Silver Pickaxe",
+	"item.terafor.silver_shovel": "Silver Shovel",
+	"item.terafor.silver_sword": "Silver Sword",
 
 	"itemGroup.terafor": "Terafor"
 }
