Add silver armor
• Added silver helmet, chestplate, leggings and boots to the ModItems registry.
• Added a model, localized name and crafting recipe for each armor piece.
• Introduced ModArmorMaterials enum for custom armor materials. (contains only silver for now)

--- a/src/main/resources/assets/terafor/lang/en_us.json
+++ b/src/main/resources/assets/terafor/lang/en_us.json
@@ -7,6 +7,10 @@
 	"item.terafor.silver_pickaxe": "Silver Pickaxe",
 	"item.terafor.silver_shovel": "Silver Shovel",
 	"item.terafor.silver_sword": "Silver Sword",
+	"item.terafor.silver_helmet": "Silver Helmet",
+	"item.terafor.silver_chestplate": "Silver Chestplate",
+	"item.terafor.silver_leggings": "Silver Leggings",
+	"item.terafor.silver_boots": "Silver Boots",
 
 	"itemGroup.terafor": "Terafor"
 }
