Add silver ore & silver block tweak
• Added silver ore to the ModBlocks and ModItems registries.
• Added silver ore models, blockstate and localized name.
• Tweaked the silver block to require a tool to pick up, as well as set the block's hardness, resistance and sound.

This commit just contains the ore itself, not any actual ore generation.

--- a/src/main/resources/assets/terafor/lang/en_us.json
+++ b/src/main/resources/assets/terafor/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"block.terafor.silver_block": "Block of Silver",
+	"block.terafor.silver_ore": "Silver Ore",
 
 	"item.terafor.silver_axe": "Silver Axe",
 	"item.terafor.silver_hoe": "Silver Hoe",
