Add silver nugget
• Added silver nugget to the ModItems registry.
• Added silver nugget recipes from smelting, blasting and crafting.

--- a/src/main/resources/assets/terafor/lang/en_us.json
+++ b/src/main/resources/assets/terafor/lang/en_us.json
@@ -5,6 +5,7 @@
 	"item.terafor.silver_axe": "Silver Axe",
 	"item.terafor.silver_hoe": "Silver Hoe",
 	"item.terafor.silver_ingot": "Silver Ingot",
+	"item.terafor.silver_nugget": "Silver Nugget",
 	"item.terafor.silver_pickaxe": "Silver Pickaxe",
 	"item.terafor.silver_shovel": "Silver Shovel",
 	"item.terafor.silver_sword": "Silver Sword",
